--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -59,13 +59,15 @@ format: frontpage
 *
 {% endcomment %}
 
-{% unless site.posts == empty %}
+
+{% unless site.front_page_artifacts == empty %}
+  {% assign posts = site.front_page_artifacts | where:"shirt_section",true %}
     <div class="row t30 b20 homepage">
         <div class="small-12 columns">
-            {% for post in site.posts limit:1 %}
+            {% for post in posts %}
             {% if post.image.homepage %}
             <p>
-                <a href="{{ site.url }}{{ site.baseurl }}{{ post.url }}" title="{{ post.title | escape_once }}"><img width="970" src="{{ site.urlimg }}{{ post.image.homepage }}" alt="{{ page.title | escape_once }}"></a>
+                <a href="https://oddtoaster.com/" title="OddToasterTees"><img width="970" src="{{ site.urlimg }}{{ post.image.homepage }}" alt="{{ page.title | escape_once }}"></a>
             </p>
 
             {% if post.image.caption_url and post.image.caption %}
@@ -83,7 +85,7 @@ format: frontpage
 
     <div class="row">
         <div class="medium-6 columns">
-            {% for post in site.posts limit:1 %}
+            {% for post in posts %}
             {% if post.subheadline %}<p class="subheadline">{{ post.subheadline }}</p>{% endif %}
             <h2><a href="{{ site.url }}{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
             <p>
@@ -93,7 +95,7 @@ format: frontpage
             {% endfor %}
         </div><!-- /.medium-5.columns -->
 
-
+        <!-- ==> section that says More Articles <== -->
         <div class="medium-6 columns">
             <p><strong>{{ site.data.language.more_articles }}</strong></p>
             {% include list-posts entries='3' offset='1' %}
