Updated navigation and other thangs

--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -97,8 +97,19 @@ format: frontpage
 
         <!-- ==> section that says More Articles <== -->
         <div class="medium-6 columns">
-            <p><strong>{{ site.data.language.more_articles }}</strong></p>
-            {% include list-posts entries='3' offset='1' %}
+            <p><strong>Popular Icebreaker T-Shirts</strong></p>
+                <ul class="side-nav">
+
+                  <li><a href="http://oddtoaster.com/products/unisex-short-sleeve-t-shirt-1">Social Media · <strong>Twitter is down again?!</strong></a></li>
+                
+                  <li><a href="http://oddtoaster.com/products/short-sleeve-mens-t-shirt-7">Internet · <strong>Don't Believe Everything...</strong></a></li>
+                
+                  <li><a href="https://oddtoaster.com/products/short-sleeve-mens-t-shirt-5">Teamwork · <strong>There is an "I" in team.</strong></a></li>
+                
+                  <li class="text-right"><a href="https://oddtoaster.com/"><strong>More ›</strong></a></li>
+              
+            </ul>
+
         </div><!-- /.medium-7.columns -->
     </div><!-- /.row -->
 {% endunless %}
