--- a/_includes/_sidebar.html
+++ b/_includes/_sidebar.html
@@ -1,14 +1,114 @@
 <aside>
 	<div class="panel radius">
-		<h3>Sidebar</h3>
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+		<!-- START OF SHOPIFY BUT CODE -->
+		<div id='product-component-67d20c3d171'></div>
+		<script type="text/javascript">
+		/*<![CDATA[*/
 
-			Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		</p>
+		(function () {
+		  var scriptURL = 'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';
+		  if (window.ShopifyBuy) {
+		    if (window.ShopifyBuy.UI) {
+		      ShopifyBuyInit();
+		    } else {
+		      loadScript();
+		    }
+		  } else {
+		    loadScript();
+		  }
+
+		  function loadScript() {
+		    var script = document.createElement('script');
+		    script.async = true;
+		    script.src = scriptURL;
+		    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(script);
+		    script.onload = ShopifyBuyInit;
+		  }
+
+		  function ShopifyBuyInit() {
+		    var client = ShopifyBuy.buildClient({
+		      domain: 'odd-toaster.myshopify.com',
+		      apiKey: '211ee4fbdfd1ce52c6c9de14f1f00630',
+		      appId: '6',
+		    });
+
+		    ShopifyBuy.UI.onReady(client).then(function (ui) {
+		      ui.createComponent('product', {
+		        id: [8922479427],
+		        node: document.getElementById('product-component-67d20c3d171'),
+		        moneyFormat: '%24%7B%7Bamount%7D%7D',
+		        options: {
+		  "product": {
+		    "variantId": "all",
+		    "contents": {
+		      "imgWithCarousel": false,
+		      "variantTitle": false,
+		      "description": false,
+		      "buttonWithQuantity": false,
+		      "quantity": false
+		    },
+		    "styles": {
+		      "product": {
+		        "@media (min-width: 601px)": {
+		          "max-width": "calc(25% - 20px)",
+		          "margin-left": "20px",
+		          "margin-bottom": "50px"
+		        }
+		      }
+		    }
+		  },
+		  "cart": {
+		    "contents": {
+		      "button": true
+		    },
+		    "styles": {
+		      "footer": {
+		        "background-color": "#ffffff"
+		      }
+		    }
+		  },
+		  "modalProduct": {
+		    "contents": {
+		      "img": false,
+		      "imgWithCarousel": true,
+		      "variantTitle": false,
+		      "buttonWithQuantity": true,
+		      "button": false,
+		      "quantity": false
+		    },
+		    "styles": {
+		      "product": {
+		        "@media (min-width: 601px)": {
+		          "max-width": "100%",
+		          "margin-left": "0px",
+		          "margin-bottom": "0px"
+		        }
+		      }
+		    }
+		  },
+		  "productSet": {
+		    "styles": {
+		      "products": {
+		        "@media (min-width: 601px)": {
+		          "margin-left": "-20px"
+		        }
+		      }
+		    }
+		  }
+		}
+		      });
+		    });
+		  }
+		})();
+		/*]]>*/
+		</script>
+
+		<!-- END OF SHOPIFY BUT CODE -->
 	</div>
 
-  <img class="b30" src="http://dummyimage.com/303x16:9/df4949/e27b3f.png&amp;text=Ugly+Ad+Space" alt="">
+	<!-- DISABLED FOR NOW START -->
+	
+<!--   <img class="b30" src="http://dummyimage.com/303x16:9/df4949/e27b3f.png&amp;text=Ugly+Ad+Space" alt="">
 
 
 	<div class="border-dotted radius b30">
@@ -16,5 +116,7 @@
 		<p class="text-left">
 			This is an advertisment with a crazy cat! <a href="http://placekitten.com/">More cats, please!</a>
 		</p>
-	</div>
+	</div> -->
+
+	<!-- DISABLED FOR NOW END -->
 </aside>
