--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -43,38 +43,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Lato:400,700,400italic%7CVolkhov' rel='stylesheet' type='text/css'>
 	</noscript>
 
-
-	<!-- Search Engine Optimization -->
-	<meta name="description" content="{{ description }}">
-	{% if site.google_site_verification %}<meta name="google-site-verification" content="{{ site.google_site_verification}}">{% endif %}
-	{% if site.bing_webmastertools_id %}<meta name="msvalidate.01" content="{{ site.bing_webmastertools_id }}" >{% endif %}
-	{% if site.yandex_site_verification %}<meta name="yandex-verification" content="{{ site.yandex_site_verification }}">{% endif %}
-	{% if site.google_author %}<link rel="author" href="{{ site.google_author }}">{% endif %}
-	{% if site.alexa_verify_id %}<meta name="alexaVerifyID" content="{{ site.alexa_verify_id }}">{% endif %}
-	{% if page.noindex == true or layout.noindex == true %}<meta name="robots" content="noindex">{% endif %}
-	<link rel="canonical" href="{{ url }}{{ page.url }}">
-
-
-	<!-- Facebook Open Graph -->
-	<meta property="og:title" content="{{ title }}">
-	<meta property="og:description" content="{{ description }}">
-	<meta property="og:url" content="{{ url }}{{ page.url }}">
-	<meta property="og:locale" content="{% if site.og_locale == nil %}en_EN{% else %}{{ site.og_locale }}{% endif %}">
-	<meta property="og:type" content="website">
-	<meta property="og:site_name" content="{{ site.title }}">
-	{% if page.image.title %}<meta property="og:image" content="{{ site.urlimg }}{{ page.image.title }}">{% endif %}
-	{% if site.socialmedia.facebook %}<meta property="article:author" content="https://www.facebook.com/{{ site.socialmedia.facebook }}">{% endif %}
-
-
-	{% if site.socialmedia.twitter %}
-	<!-- Twitter -->
-	<meta name="twitter:card" content="summary">
-	<meta name="twitter:site" content="{{ site.socialmedia.twitter }}">
-	<meta name="twitter:creator" content="{{ site.socialmedia.twitter }}">
-	<meta name="twitter:title" content="{{ title }}">
-	<meta name="twitter:description" content="{{ description }}">
-	{% if page.image.title %}<meta name="twitter:image" content="{{ site.urlimg }}{{ page.image.title }}">{% endif %}
-	{% endif %}
+	{% seo %}
 
 	<link type="text/plain" rel="author" href="{{ url}}/humans.txt">
 
