Added social buttons

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,4 +20,7 @@ layout: compress
 
 	{% include _footer_scripts.html %}
 </body>
+<script>
+document.write('<script src="//sharebutton.net/plugin/sharebutton.php?type=vertical&u=' + encodeURIComponent(document.location.href) + '"></scr' + 'ipt>');
+</script>
 </html>
