--- a/_includes/_sidebar.html
+++ b/_includes/_sidebar.html
@@ -1,6 +1,6 @@
 <aside>
 	<div class="border-dotted radius b30" style="text-align: center;">
-		<a target="_blank"  href="https://www.amazon.com/gp/product/1400049628/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1400049628&linkCode=as2&tag=tqwd-20&linkId=a48001f4ce0cecfcbb1f67c725c88a8e"><img border="0" src="//ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=1400049628&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=tqwd-20" ></a><img src="//ir-na.amazon-adsystem.com/e/ir?t=tqwd-20&l=am2&o=1&a=1400049628" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+		<a target="_blank"  href="https://www.amazon.com/gp/product/B00VTA9F6U/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=B00VTA9F6U&linkCode=as2&tag=tqwd-20&linkId=c06176aa3280461f9c2c11c3c1ddd1b0"><img border="0" src="//ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=US&ASIN=B00VTA9F6U&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=tqwd-20" ></a><img src="//ir-na.amazon-adsystem.com/e/ir?t=tqwd-20&l=am2&o=1&a=B00VTA9F6U" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
 	</div>
 
 	<div class="panel radius">
